--- a/01Training_Android_FGL01/project.properties
+++ b/01Training_Android_FGL01/project.properties
@@ -12,4 +12,4 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../appcompat_v7_3
+android.library.reference.1=../../../workspace/Eclipse4_AndroidFgl01/appcompat_v7_5
