--- a/01Training_Android_FGL01/AndroidManifest.xml
+++ b/01Training_Android_FGL01/AndroidManifest.xml
@@ -4,6 +4,8 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <!--     FGL: Weil mit dem SDK Manager die 23er Version installiert wurde, gibt es Fehlermeldungen. Darum die Version 23 hier als Zielversion eintragen -->
+<!--  	<uses-sdk android:minSdkVersion="4" android:targetSdkVersion="23" /> -->
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="23" />
